tests/envoy-gateway/gw.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
  infrastructure:
    annotations:
      metallb.io/loadBalancerIPs: 192.168.56.88
